// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupMenuButton ios only calls showActionSheetWithOptions with the right params 1`] = `
Array [
  Array [
    Object {
      "cancelButtonIndex": 2,
      "destructiveButtonIndex": undefined,
      "options": Array [
        "Option 1",
        "Option 2",
        "Cancel",
      ],
    },
    [Function],
  ],
]
`;

exports[`PopupMenuButton matches the last snapshot on android 1`] = `
<View
  accessibilityLabel="A View Props Label"
  accessible={true}
  focusable={true}
  forwardedRef={[Function]}
  hitSlop={
    Object {
      "top": 10,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  Hello World
</View>
`;

exports[`PopupMenuButton matches the last snapshot on ios 1`] = `
<View
  accessibilityLabel="A View Props Label"
  accessible={true}
  focusable={true}
  hitSlop={
    Object {
      "top": 10,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  Hello World
</View>
`;
